; ModuleID = '/home/carl/AnghaBench/glfw/deps/extr_glad_gl.c_glad_gl_load_GL_VERSION_2_1.c'
source_filename = "/home/carl/AnghaBench/glfw/deps/extr_glad_gl.c_glad_gl_load_GL_VERSION_2_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GLAD_GL_VERSION_2_1 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"glUniformMatrix2x3fv\00", align 1
@glUniformMatrix2x3fv = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [21 x i8] c"glUniformMatrix2x4fv\00", align 1
@glUniformMatrix2x4fv = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [21 x i8] c"glUniformMatrix3x2fv\00", align 1
@glUniformMatrix3x2fv = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [21 x i8] c"glUniformMatrix3x4fv\00", align 1
@glUniformMatrix3x4fv = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [21 x i8] c"glUniformMatrix4x2fv\00", align 1
@glUniformMatrix4x2fv = common dso_local global i64 0, align 8
@.str.5 = private unnamed_addr constant [21 x i8] c"glUniformMatrix4x3fv\00", align 1
@glUniformMatrix4x3fv = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64 (i8*, i8*)*, i8*)* @glad_gl_load_GL_VERSION_2_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @glad_gl_load_GL_VERSION_2_1(i64 (i8*, i8*)* %0, i8* %1) #0 {
  %3 = alloca i64 (i8*, i8*)*, align 8
  %4 = alloca i8*, align 8
  store i64 (i8*, i8*)* %0, i64 (i8*, i8*)** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @GLAD_GL_VERSION_2_1, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %27

8:                                                ; preds = %2
  %9 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %3, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i64 %9(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %10)
  store i64 %11, i64* @glUniformMatrix2x3fv, align 8
  %12 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i64 %12(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8* %13)
  store i64 %14, i64* @glUniformMatrix2x4fv, align 8
  %15 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %3, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i64 %15(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.2, i64 0, i64 0), i8* %16)
  store i64 %17, i64* @glUniformMatrix3x2fv, align 8
  %18 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %3, align 8
  %19 = load i8*, i8** %4, align 8
  %20 = call i64 %18(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0), i8* %19)
  store i64 %20, i64* @glUniformMatrix3x4fv, align 8
  %21 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %3, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = call i64 %21(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0), i8* %22)
  store i64 %23, i64* @glUniformMatrix4x2fv, align 8
  %24 = load i64 (i8*, i8*)*, i64 (i8*, i8*)** %3, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = call i64 %24(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0), i8* %25)
  store i64 %26, i64* @glUniformMatrix4x3fv, align 8
  br label %27

27:                                               ; preds = %8, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
